--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "bunyan": "^1.8.1",
     "lodash": "^4.15.0",
     "lowdb": "^0.13.1",
-    "restify": "4.1.0"
+    "restify": "4.1.0",
+    "sinon": "^1.17.5"
   }
 }
